# mega-duck

./: .gitignore  CMakeLists.txt  README.md  cmdline.c  keyboard_descriptors.h  main.c
connector/: CMakeLists.txt
connector/cmake/: Findlibusb-1.0.cmake
firmware/: CMakeLists.txt  keyboard_device.c  keyboard_device.h  loader_descriptors.h  loader_device.c  loader_device.h  main.c  usb_hid_keys.h  usbconfig.h
schema/: mega-duck-cache.lib  mega-duck.pro  mega-duck.sch  mega-duck.sch-bak
